# src/controllers/user.controller.ts
@@ -1,3 +1,4 @@
+import { LoginUserDTO } from '@/dtos/user/login.user.dto';
 import { RegisterUserDTO } from '@/dtos/user/register.user.dto';
 import { User } from '@/interfaces/user.interface';
 import userService from '@/services/user.service';
@@ -34,6 +35,35 @@ class UserController extends BaseResponseController {
       const result: boolean = await this.userService.activeAccount(account, activeCode);
       this.response(res, result);
     } catch (error) {
+      next(error);
+    }
+  };
+
+  public generateQR = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      const account = req.query.account ? req.query.account.toString() : '';
+      const { otpauthUrl, base32 } = await this.userService.generateTwoFactorAuthenticationCode(account);
+
+      await this.userService.updateSecretBase32(account, base32);
+      this.userService.responseQRcode(otpauthUrl, res);
+      return true;
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public login = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+      const body: LoginUserDTO = req.body;
+      const { token, object } = await this.userService.login(body);
+      const result = { token, ...object._doc };
+      delete result.password;
+      delete result.twoFactorAuthenticationCode;
+
+      this.response(res, result);
+    } catch (error) {
+      console.log(error);
+
       next(error);
     }
   };
