# src/dtos/user/login.user.dto.ts
@@ -1,0 +1,14 @@
+import { IsEmail, IsNotEmpty, IsString, Length } from 'class-validator';
+
+export class LoginUserDTO {
+  @IsEmail()
+  public email: string;
+
+  @IsString()
+  @IsNotEmpty()
+  @Length(10, 20)
+  public password: string;
+
+  @Length(6)
+  public twofaCode: string;
+}
